force-app/main/default/objects/Invoice__c/fields/Base_Amount__c.field-meta.xml
<CustomField>
    <fullName>Base_Amount__c</fullName>
    <description>Gross invoice amount before any credits are applied. Set by the activation flow: $149 (Senior Host), $89 (Renter), or calculated placement fee.</description>
    <label>Base Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>