force-app/main/default/objects/Invoice__c/fields/Billed_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billed_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Contact (Senior Host or Young Renter) who receives this invoice.</description>
    <label>Billed Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>