force-app/main/default/objects/Invoice__c/fields/Billing_Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Billing_Period_Start__c</fullName>
    <description>First day of the billing month this invoice covers. Used by the Monthly Billing Scheduled Flow to prevent duplicate invoice generation.</description>
    <label>Billing Period Start</label>
    <type>Date</type>
</CustomField>