force-app/main/default/objects/Invoice__c/fields/Credit_Applied__c.field-meta.xml
<CustomField>
    <fullName>Credit_Applied__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total credits applied to this invoice. Set by the flow that creates or applies a Credit Memo (SLA credit, first-month waiver, proration). The Total Amount formula subtracts this from Base Amount.</description>
    <label>Credit Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>