force-app/main/default/objects/Invoice__c/fields/Failure_Count__c.field-meta.xml
<CustomField>
    <fullName>Failure_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Incremented by the Dunning Flow on each failed payment attempt. At 3, the Match is suspended.</description>
    <label>Failure Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>