force-app/main/default/objects/Invoice__c/fields/Invoice_Type__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Type__c</fullName>
    <description>Categorizes the invoice for reporting and flow filtering. Monthly Billing Scheduled Flow filters on this to avoid duplicates.</description>
    <label>Invoice Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly Subscription</fullName>
                <default>true</default>
                <label>Monthly Subscription</label>
            </value>
            <value>
                <fullName>Placement Fee</fullName>
            </value>
            <value>
                <fullName>One-Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>