force-app/main/default/objects/Invoice__c/fields/Match__c.field-meta.xml
<CustomField>
    <fullName>Match__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The active Match this invoice belongs to.</description>
    <label>Match</label>
    <referenceTo>Match__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>