force-app/main/default/objects/Invoice__c/fields/Stripe_Payment_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Payment_ID__c</fullName>
    <description>Stores the Stripe charge ID (e.g. ch_3abc123). In sandbox demo, populated with SIM-[date] to simulate payment confirmation without a live Stripe integration.</description>
    <label>Stripe Payment ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>